# hackthon

./: .gitignore  .gitmodules  README.md  package-lock.json  package.json
.playwright-cli/: page-2026-04-11T10-26-07-374Z.yml  page-2026-04-11T12-36-27-651Z.yml  page-2026-04-11T12-51-15-428Z.yml  page-2026-04-11T12-51-35-728Z.yml  page-2026-04-11T13-07-03-108Z.yml  page-2026-04-11T13-08-14-771Z.yml  page-2026-04-11T13-10-03-044Z.yml
backend/: pyproject.toml  requirements.txt  test_stream.py
backend/app/: __init__.py  engine.py  llm.py  main.py  models.py  store.py
backend/app/api/: projects.py  simulation.py
backend/app/core/: config.py  db.py  llm.py
backend/app/domain/: __init__.py  models.py  schemas.py
backend/app/services/: life_engine_service.py  simulation_service.py
backend/data/projects/: 1c6efd2a.json  20df3f04.json  29629ca4.json  4deeeb2a.json  5cc34697.json  64d33485.json  75d3ff02.json  97324747.json  f5104288.json
backend/tests/: conftest.py  test_api.py  test_projects.py  test_simulation.py
backend/tests/test_data/projects/: 46d6c753.json
docs/: hackathon-pitch-ai-for-social-good.md  hackathon-submission-CloseAI.md  life-path-project-plan.md  life-simulation-engine-paradigm.md  lifepath-engine-frontend-backend-plan.md  lifepath-engine-requirements.md  lifepath-technical-architecture.md  mirofish-analysis.md
docs/demo/: high-end-demo.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/css/: style.css
output/: project-state.json
storage/: lifepath-state.json
tools/: fetch_stitch_assets.mjs
(+57 files in other folders)
